--- a/Android/BlunoBasicDemo/app/build.gradle
+++ b/Android/BlunoBasicDemo/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
-
+    compileSdkVersion 29
+    //    buildToolsVersion '31.0.0'
     defaultConfig {
-        applicationId "com.dfrobot.angelo.blunobasicdemo"
+        applicationId "com.dfrobot.angelo.blunobasicremote"
         minSdkVersion 18
-        targetSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -20,7 +19,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:21.0.3'
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    testCompile 'junit:junit:4.12'
+//    compile 'com.android.support:appcompat-v7:21.0.3'
+
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
