--- a/Android/BlunoBasicDemo/app/src/main/AndroidManifest.xml
+++ b/Android/BlunoBasicDemo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dfrobot.angelo.blunobasicdemo">
+    package="com.dfrobot.angelo.blunobasicremote">
 
 
     <!-- Declare this required feature if you want to make the app available to BLE-capable
@@ -11,6 +11,11 @@ PackageManager.hasSystemFeature(FEATURE_BLUETOOTH_LE) -->
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />-->
+
 
     <application
         android:allowBackup="true"
@@ -19,7 +24,7 @@ PackageManager.hasSystemFeature(FEATURE_BLUETOOTH_LE) -->
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.dfrobot.angelo.blunobasicremote.MainActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
@@ -28,7 +33,7 @@ PackageManager.hasSystemFeature(FEATURE_BLUETOOTH_LE) -->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.dfrobot.angelo.blunobasicdemo.BluetoothLeService" android:enabled="true"/>
+        <service android:name="com.dfrobot.angelo.blunobasicremote.BluetoothLeService" android:enabled="true"/>
 
     </application>
 
